fix(header): fix layout bug

--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -8,6 +8,7 @@
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
 
     .menu-inner {
+      position: relative;
       width: 900px;
       margin-left: auto;
       margin-right: auto;
@@ -23,7 +24,9 @@
       }
 
       .sub-menu {
-        float: right;
+        position: absolute;
+        right: 0;
+        top: 0;
 
         .sub-menu-item a {
           padding-top: 0;
